Remove colorama dependency and refactor startup logic
Eliminated the use of colorama throughout the codebase and removed it from dependencies. Refactored main.py to use the new bootstrap utility for environment and database checks. Improved logger setup for better path handling, log archiving, and environment variable validation. Enhanced bootstrap.py with more robust schema checking and error reporting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
 name = "arfbot"
 version = "0.1.0"
-description = "Simple telegram footbol game bot"
+description = "Simple telegram football game bot"
 requires-python = ">=3.14"
 dependencies = [
     "aiogram>=3.24.0",
     "aiosqlite>=0.22.1",
-    "colorama>=0.4.6",
     "loguru>=0.7.3",
     "python-dotenv>=1.2.1",
 ]
