--- a/loc/ru_RU.yaml
+++ b/loc/ru_RU.yaml
@@ -1,3 +1,50 @@
 ﻿config:
   loc_name: "Русский (RU)"
   loc_flag: "🇷🇺"
+messages:
+  welcome: |
+    ID: {user_id}
+    Имя: {username}
+    Монеты: {coins}
+    Билеты: {tickets}
+    Кубки: {cups}
+    О игроке:
+    {user_info}
+  full_info: |
+    Статистика игрока "{username}"
+    Монеты: {coins}
+    Билеты: {tickets}
+    Кубки: {cups}
+
+    Всего получено монет: {received_coins}
+    Всего получено билетов: {received_tickets}
+    Всего сыграно матчей: {games_played}
+    Из них вы:
+    {victories} раз выиграли ({win_rate:.2f}%)
+    {defeats} раз проиграли
+    {draws} раз вышли в ничью
+    Открыто паков:
+    {small_packs} маленьких
+    {medium_packs} средних
+    {big_packs} больших
+    Приглашено людей по реферальной ссылке: {referrals}
+    Дата регистрации: {register_date}
+
+    Также учтите что некоторое количество этих ресурсов не будет учитыватся если они выданы вам от администраторами (т.е. призрачные):
+    Призрачные маленькие паки: {ghost_small}
+    Призрачные средние паки: {ghost_medium}
+    Призрачные большие паки: {ghost_big}
+    Неучтенная успешность: {ghost_success}
+
+
+    Ваша итоговая успешность: {success}
+    Вы находитесь на {position} месте в топе бота
+    Ваш ранг: {rank}
+    Уровень ФП: {fp_level}Н/Д (скоро)
+  banned: "Вы забанены и не можете использовать этого бота.\nДата окончания бана: {ban_date}"
+  user_not_found: "Пользователь не найден."
+  select_lang: "Выберите ваш язык:"
+  lang_changed: "Язык успешно изменен!"
+  select_name: "Пожалуйста, введите ваше имя для регистрации:"
+  name_empty: "Имя не может быть пустым. Пожалуйста, введите ваше имя:"
+
