--- a/loc/uk_UA.yaml
+++ b/loc/uk_UA.yaml
@@ -1,3 +1,50 @@
 ﻿config:
   loc_name: "Українська (UA)"
   loc_flag: "🇺🇦"
+messages:
+  welcome: |
+    ID: {user_id}
+    Ім'я: {username}
+    Монети: {coins}
+    Квитки: {tickets}
+    Кубки: {cups}
+    Про гравця:
+    {user_info}
+  full_info: |
+    Статистика гравця "{username}"
+    Монети: {coins}
+    Квитки: {tickets}
+    Кубки: {cups}
+
+    Загалом отримано монет: {received_coins}
+    Загалом отримано квитків: {received_tickets}
+    Загалом зіграно матчів: {games_played}
+    З яких ви:
+    {victories} разів виграли ({win_rate:.2f}%)
+    {defeats} разів програли
+    {draws} разів зіграли в нічию
+    Відкрито паків:
+    {small_packs} маленьких
+    {medium_packs} середніх
+    {big_packs} великих
+    Запрошено людей через реферальне посилання: {referrals}
+    Дата реєстрації: {register_date}
+
+    Також зауважте, що деякі ресурси не будуть враховуватися, якщо вони були видані адміністраторами (тобто примарні):
+    Примарні маленькі паки: {ghost_small}
+    Примарні середні паки: {ghost_medium}
+    Примарні великі паки: {ghost_big}
+    Неврахований успіх: {ghost_success}
+
+
+    Ваш загальний успіх: {success}
+    Ви знаходитесь на {position} місці в топі бота
+    Ваш ранг: {rank}
+    Рівень ФП: {fp_level}Н/Д (скоро)
+  banned: "Ви забанені і не можете використовувати цього бота.\nДата закінчення бану: {ban_date}"
+  user_not_found: "Користувача не знайдено."
+  select_lang: "Виберіть вашу мову:"
+  lang_changed: "Мову успішно змінено!"
+  select_name: "Будь ласка, введіть ваше ім'я для реєстрації:"
+  name_empty: "Ім'я не може бути порожнім. Будь ласка, введіть ваше ім'я:"
+
