Add game and event localization for Czech, English, Russian, and Ukrainian

--- a/loc/cs_CZ.yaml
+++ b/loc/cs_CZ.yaml
@@ -47,4 +47,120 @@ messages:
   lang_changed: "Jazyk byl úspěšně změněn!"
   select_name: "Zadejte prosím své jméno pro registraci:"
   name_empty: "Jméno nemůže být prázdné. Zadejte prosím své jméno:"
-
+  games_and_events: "Vyberte sekci:"
+  games: "Hry"
+  events: "Události"
+  penalty: "Penalty Series"
+  penalty_start: "Penalty series! Potřebujete 25000 úspěchu k hraní."
+  penalty_result: "Gólů: {goals}/5, Odměna: {reward} mincí, Pokusů zbývá: {left}"
+  matches: "Zápasy"
+  match_start: "Zápas proti {opponent} ({success})"
+  match_win: "Vyhráli jste {score1}:{score2}, +11000 mincí, +10 pohárů!"
+  match_lose: "Prohráli jste {score1}:{score2}. Důvod: {reason}"
+  match_draw: "Remíza {score1}:{score2}"
+  loss_reasons:
+    - "Rozhodčí byl nespravedlivý"
+    - "Byl jsi v špatné náladě"
+    - "Nehrál jsi jako tým"
+    - "Nedostatek zkušeností"
+    - "Špatné zdraví"
+    - "Špatná koncentrace"
+    - "Nešťastná shoda okolností"
+    - "Protivník byl silnější"
+    - "Špatná volba taktiky"
+    - "Minul jsi se v rozhodujícím okamžiku"
+    - "Byl jsi příliš unavený"
+    - "Smůla"
+    - "Zranění"
+    - "Špatná komunikace v týmu"
+    - "Špatná volba složení týmu"
+    - "Příliš pilně jsi dodržoval taktiku, aniž bys zvažoval akce soupeře"
+    - "Někteří hráči v týmu nezvládli zátěž"
+    - "Příliš jsi se vzdal po inkasovaném gólu"
+    - "Nedostatek spánku předchozí noci"
+    - "Protivník použil zakázané techniky"
+    - "Nedostatečná motivace v týmu"
+    - "Žádná chemie mezi hráči týmu"
+    - "Protivník je kreativnější a vynalézavější"
+    - "Nepodařilo se ti přizpůsobit stylu hry soupeře"
+    - "Příliš mnoho tlaku na hráče"
+    - "Nedostatek času na přípravu na zápas"
+    - "Žádná plná koncentrace na hru"
+    - "Špatně zvolený okamžik pro útok"
+    - "Nedostatečná herní praxe"
+    - "Protivník je techničtější a zručnější"
+    - "Příliš mnoho chyb ve hře"
+    - "Protivník byl více motivovaný a chtěl vítězství více"
+    - "Žádné vzájemné porozumění v týmu"
+    - "Udělal jsi špatné rozhodnutí v rozhodujícím okamžiku"
+    - "Protivník použil neočekávané taktiky"
+    - "Nedostatek koordinace v týmu"
+    - "Špatné povětrnostní podmínky"
+    - "Problémy s vybavením"
+    - "Protivník hrál velmi agresivně"
+    - "Nedostatečná důvěra ve své schopnosti"
+    - "Protivník použil efektivnější taktiky"
+    - "Špatná volba vybavení"
+    - "Nedostatečná vytrvalost"
+    - "Špatná volba stravy"
+    - "Protivník měl silnější podporu od fanoušků"
+    - "Nedostatečné pochopení pravidel hry"
+    - "Špatná kontrola nad emocemi"
+    - "Protivník je příliš rychlý a obratný"
+    - "Stal jsi se příliš defenzivním po začátku zápasu"
+    - "Špatně jsi odhadl schopnosti svého týmu"
+    - "Nedostatečná znalost taktiky a strategie"
+    - "Špatná forma před zápasem"
+    - "Protivník použil lstivost a podvod během hry"
+    - "Nedostatečný efektivní trénink před zápasem"
+    - "Špatná volba partnerů pro hru"
+    - "Nedostatek zkušeností ve hrách na vysoké úrovni"
+    - "Chyby při přípravě na zápas"
+    - "Neschopnost přizpůsobit se měnícím se podmínkám hry"
+    - "Špatná motivace od trenéra"
+    - "Byl jsi nervózní před zápasem a nemohl ses uvolnit"
+    - "Protivník byl fyzicky lépe připraven"
+    - "Nedostatečná efektivní obranná taktika"
+    - "Nedostatečně nastavený systém týmové hry"
+    - "Špatná volba taktiky pro konkrétního soupeře"
+    - "Protivník použil jemnější taktické triky"
+    - "Nedostatek podpory od fanoušků"
+    - "Špatné pocit v den zápasu"
+    - "Špatně jsi odhadl síly svých soupeřů"
+    - "Příliš mnoho rušivých faktorů mimo hřiště"
+    - "Nedostatečně efektivní správa složení týmu"
+    - "Nepodařilo se ti přizpůsobit se měnícím se podmínkám hry"
+    - "Protivník byl lépe připraven psychologicky"
+    - "Nedostatečně vyvinuté intuitivní porozumění ostatním členům týmu"
+    - "Zažil jsi fyzickou bolest nebo nepohodlí během hry"
+    - "Nedostatek profesionální pomoci při sestavování taktiky"
+    - "Protivník příliš dobře znal tvé silné a slabé stránky"
+    - "Byl jsi příliš předvídatelný ve své hře"
+    - "Nedostatečná efektivní útočná taktika"
+    - "Protivník hrál v týmu déle a efektivněji"
+    - "Příliš mnoho času bylo stráveno přemítáním o neúspěších v předchozích zápasech"
+    - "Nedostatečně času věnovaného učení fyzickým a technickým aspektům hry"
+    - "Špatná volba okamžiku pro výměnu hráčů"
+    - "Nedostatek disciplíny v týmu"
+    - "Nedodržoval jsi svou strategii"
+    - "Protivník byl lépe připraven na konkrétní hru"
+    - "Protivník použil jemnější manévry a taktiku"
+    - "Protivník hrál velmi silně na začátku hry a nastavil vítězný průběh"
+    - "Tým není dostatečně zkušený celkově"
+    - "Vnější faktory, jako počasí nebo kvalita hřiště, negativně ovlivnily tvou hru"
+    - "Protivník měl hlavního trenéra s většími zkušenostmi než ty"
+    - "Protivník používá inovativní metody tréninku a přípravy"
+    - "Špatné rozdělení rolí v týmu"
+    - "Nedostatek mentální přípravy na hru"
+    - "Příliš slabý nebo neefektivní vůdce v týmu"
+    - "Nedostatečná efektivita univerzality ve složení týmu"
+    - "Protivník použil silnou obrannou taktiku, která bránila tvému týmu skórovat góly"
+  commands_list: "Dostupné příkazy:\n/games - Hrát hry\n/stats - Zobrazit statistiky\n/profile - Nastavení profilu\n/shop - Obchod\n/referral - Referenční systém\n/changelang - Změnit jazyk"
+  no_attempts_left: "Nemáte žádné pokusy!"
+  match_started: "Zápas začal"
+  wait_15_seconds: "Zápas začal, čekejte 15 sekund..."
+  match_requirements: "Pro hraní zápasu potřebujete 5000 mincí a 1 lístek"
+  insufficient_resources: "Nedostatečné zdroje!"
+  no_opponents: "Žádní dostupní soupeři!"
+  opponent_search_error: "Chyba vyhledávání soupeře!"
+  play_button: "Hrát"
