--- a/loc/en_US.yaml
+++ b/loc/en_US.yaml
@@ -47,4 +47,120 @@ messages:
   lang_changed: "Language changed successfully!"
   select_name: "Please enter your name for registration:"
   name_empty: "Name cannot be empty. Please enter your name:"
-
+  games_and_events: "Choose section:"
+  games: "Games"
+  events: "Events"
+  penalty: "Penalty Series"
+  penalty_start: "Penalty series! You need 25000 success to play."
+  penalty_result: "Goals: {goals}/5, Reward: {reward} coins, Attempts left: {left}"
+  matches: "Matches"
+  match_start: "Match against {opponent} ({success})"
+  match_win: "You won {score1}:{score2}, +11000 coins, +10 cups!"
+  match_lose: "You lost {score1}:{score2}. Reason: {reason}"
+  match_draw: "Draw {score1}:{score2}"
+  commands_list: "Available commands:\n/games - Play games\n/stats - View statistics\n/profile - Profile settings\n/shop - Shop\n/referral - Referral system\n/changelang - Change language"
+  no_attempts_left: "You have no attempts left!"
+  match_started: "Match started"
+  wait_15_seconds: "Match started, wait 15 seconds..."
+  match_requirements: "To play a match, you need 5000 coins and 1 ticket"
+  insufficient_resources: "Insufficient resources!"
+  no_opponents: "No available opponents!"
+  opponent_search_error: "Opponent search error!"
+  play_button: "Play"
+  loss_reasons:
+    - "The referee was unfair"
+    - "You were in a bad mood"
+    - "You didn't play as a team"
+    - "Lack of experience"
+    - "Poor health"
+    - "Poor concentration"
+    - "Unfortunate circumstances"
+    - "The opponent was stronger"
+    - "Bad choice of tactics"
+    - "Missed in the decisive moment"
+    - "Too tired"
+    - "Bad luck"
+    - "Injury"
+    - "Poor communication in the team"
+    - "Wrong choice of team composition"
+    - "Too diligently following the tactic without considering the opponent's actions"
+    - "Some players in the team couldn't handle the load"
+    - "You gave up too much after conceding a goal"
+    - "Lack of sleep the previous night"
+    - "The opponent used prohibited techniques"
+    - "Insufficient motivation in the team"
+    - "No chemistry between team players"
+    - "The opponent is more creative and inventive"
+    - "You couldn't adapt to the opponent's playing style"
+    - "Too much pressure on the players"
+    - "Not enough time to prepare for the match"
+    - "No full concentration on the game"
+    - "Wrong moment chosen for attack"
+    - "Insufficient game practice"
+    - "The opponent is more technical and skilled"
+    - "Too many mistakes in the game"
+    - "The opponent was more motivated and wanted victory more"
+    - "No mutual understanding in the team"
+    - "You made a bad decision at the decisive moment"
+    - "The opponent used unexpected tactics"
+    - "Lack of coordination in the team"
+    - "Bad weather conditions"
+    - "Equipment problems"
+    - "The opponent played very aggressively"
+    - "Insufficient confidence in your abilities"
+    - "The opponent used more effective tactics"
+    - "Bad choice of equipment"
+    - "Insufficient endurance"
+    - "Wrong choice of nutrition"
+    - "The opponent had stronger support from the fans"
+    - "Insufficient understanding of the game rules"
+    - "Poor control over emotions"
+    - "The opponent is too fast and agile"
+    - "You became too defensive after the start of the match"
+    - "Misjudged your team's capabilities"
+    - "Insufficient knowledge of tactics and strategy"
+    - "Bad form before the match"
+    - "The opponent used cunning and deception during the game"
+    - "Insufficient effective training before the match"
+    - "Wrong choice of partners for the game"
+    - "Lack of experience in high-level games"
+    - "Mistakes in preparing for the match"
+    - "Inability to adapt to changing game conditions"
+    - "Poor motivation from the coach"
+    - "You were nervous before the match and couldn't relax"
+    - "The opponent was more physically prepared"
+    - "Insufficient effective defense tactics"
+    - "Insufficiently established team play system"
+    - "Wrong choice of tactics for a specific opponent"
+    - "The opponent used more subtle tactical tricks"
+    - "Lack of support from the fans"
+    - "Bad feeling on the day of the match"
+    - "Misjudged the strength of your opponents"
+    - "Too many distracting factors outside the field"
+    - "Insufficient effective team composition management"
+    - "You couldn't adapt to changing game conditions"
+    - "The opponent was better prepared psychologically"
+    - "Insufficiently developed intuitive understanding of other team members"
+    - "You experienced physical pain or discomfort during the game"
+    - "Lack of professional help in developing tactics"
+    - "The opponent knew your strengths and weaknesses too well"
+    - "You were too predictable in your game"
+    - "Insufficient effective attack tactics"
+    - "The opponent played in the team longer and more effectively"
+    - "Too much time was spent thinking about failures in previous matches"
+    - "Insufficient time devoted to learning physical and technical aspects of the game"
+    - "Bad choice of moment to replace players"
+    - "Lack of discipline in the team"
+    - "You didn't follow your strategy"
+    - "The opponent was better prepared for a specific game"
+    - "The opponent used more subtle maneuvers and tactics"
+    - "The opponent played very strongly at the beginning of the game and established a winning course"
+    - "The team is not experienced enough as a whole"
+    - "External factors such as weather or field quality negatively affected your game"
+    - "The opponent had a head coach with more experience than yours"
+    - "The opponent uses innovative training and preparation methods"
+    - "Wrong distribution of roles in the team"
+    - "Lack of mental preparation for the game"
+    - "Too weak or ineffective leader in the team"
+    - "Insufficient effectiveness of versatility in the team composition"
+    - "The opponent used a strong defense tactic that prevented your team from scoring goals"
