--- a/loc/ru_RU.yaml
+++ b/loc/ru_RU.yaml
@@ -47,4 +47,120 @@ messages:
   lang_changed: "Язык успешно изменен!"
   select_name: "Пожалуйста, введите ваше имя для регистрации:"
   name_empty: "Имя не может быть пустым. Пожалуйста, введите ваше имя:"
-
+  games_and_events: "Выберите раздел:"
+  games: "Игры"
+  events: "События"
+  penalty: "Серия пенальти"
+  penalty_start: "Серия пенальти! Вам нужно 25000 успешности для игры."
+  penalty_result: "Голов: {goals}/5, Награда: {reward} монет, Попыток осталось: {left}"
+  matches: "Матчи"
+  match_start: "Матч против {opponent} ({success})"
+  match_win: "Вы выиграли {score1}:{score2}, +11000 монет, +10 кубков!"
+  match_lose: "Вы проиграли {score1}:{score2}. Причина: {reason}"
+  match_draw: "Ничья {score1}:{score2}"
+  loss_reasons:
+    - "Судья был несправедлив"
+    - "У вас было плохое настроение"
+    - "Вы не играли командно"
+    - "Нехватка опыта"
+    - "Плохое здоровье"
+    - "Плохая концентрация"
+    - "Неудачное стечение обстоятельств"
+    - "Противник сильнее"
+    - "Плохой выбор тактики"
+    - "Промахнулся в решающий момент"
+    - "Слишком устал"
+    - "Невезение"
+    - "Травма"
+    - "Плохая коммуникация в команде"
+    - "Неправильный выбор состава команды"
+    - "Слишком усердно следование тактике, не учитывая действия соперника"
+    - "Некоторые игроки в команде не справились с нагрузкой"
+    - "Вы слишком опустили руки после пропущенного мяча"
+    - "Нехватка сна в предыдущую ночь"
+    - "Соперник использовал недозволенные приемы"
+    - "Недостаточная мотивация в команде"
+    - "Нет химии между игроками команды"
+    - "Противник более креативен и изобретателен"
+    - "Вы не смогли адаптироваться к стилю игры соперника"
+    - "Слишком много давления на игроков"
+    - "Недостаточно времени для подготовки к матчу"
+    - "Нет полной концентрации на игру"
+    - "Неправильно выбранный момент для атаки"
+    - "Недостаточно игровой практики"
+    - "Противник более техничен и умел"
+    - "Слишком много ошибок в игре"
+    - "Соперник был более мотивирован и желал победу больше"
+    - "Нет взаимопонимания в команде"
+    - "Вы приняли плохое решение в решающий момент"
+    - "Противник использовал неожиданные тактики"
+    - "Нехватка координации в команде"
+    - "Плохие погодные условия"
+    - "Проблемы со снаряжением"
+    - "Соперник играл очень агрессивно"
+    - "Недостаточно уверенности в своих силах"
+    - "Противник использовал более эффективные тактики"
+    - "Плохой выбор экипировки"
+    - "Недостаточная выносливость"
+    - "Неверный выбор питания"
+    - "Соперник имел более сильную поддержку со стороны зрителей"
+    - "Недостаточное понимание правил игры"
+    - "Плохой контроль над эмоциями"
+    - "Противник слишком быстрый и ловкий"
+    - "Вы стали слишком оборонительными после начала матча"
+    - "Неправильно оценили возможности своей команды"
+    - "Недостаточное знание тактики и стратегии"
+    - "Плохая форма перед матчем"
+    - "Соперник использовал хитрость и обман во время игры"
+    - "Недостаточная эффективная тренировка перед матчем"
+    - "Неверный выбор партнеров для игры"
+    - "Нехватка опыта в играх на высоком уровне"
+    - "Ошибки при подготовке к матчу"
+    - "Неспособность адаптироваться к изменяющимся условиям игры"
+    - "Плохая мотивация со стороны тренера"
+    - "Вы волновались перед матчем и не смогли расслабиться"
+    - "Противник был более физически подготовлен"
+    - "Недостаточно эффективная тактика защиты"
+    - "Недостаточно налаженная система командной игры"
+    - "Неверный выбор тактики для конкретного соперника"
+    - "Противник использовал более тонкие тактические уловки"
+    - "Нехватка поддержки со стороны болельщиков"
+    - "Плохое самочувствие в день матча"
+    - "Неправильно оценили силы своих противников"
+    - "Слишком много отвлекающих факторов вне поля"
+    - "Недостаточно эффективное управление составом команды"
+    - "Вы не смогли приспособиться к изменяющимся условиям игры"
+    - "Противник был лучше подготовлен психологически"
+    - "Недостаточно выработанное интуитивное понимание других членов команды"
+    - "Вы испытывали физическую боль или дискомфорт во время игры"
+    - "Нехватка профессиональной помощи в составлении тактики"
+    - "Соперник слишком хорошо знал ваши сильные и слабые стороны"
+    - "Вы были слишком предсказуемы в своей игре"
+    - "Недостаточно эффективная тактика нападения"
+    - "Противник играл в команде дольше и эффективнее"
+    - "Слишком много времени было потрачено на размышления о неудачах в предыдущих матчах"
+    - "Недостаточно сколько времени, уделенное обучению физическим и техническим аспектам игры"
+    - "Плохой выбор момента для замены игроков"
+    - "Нехватка дисциплины в команде"
+    - "Вы не следовали своей стратегии"
+    - "Противник был лучше подготовлен к конкретной игре"
+    - "Соперник использовал более тонкие маневры и тактику"
+    - "Противник играл очень сильно в начале игры и наладил победный ход"
+    - "Недостаточно опытна команда в целом"
+    - "Внешние факторы, такие как погода или качество поля, негативно повлияли на вашу игру"
+    - "Соперник имел главного тренера, имеющего больший опыт, чем ваш"
+    - "Противник использует инновационные методы тренировки и подготовки"
+    - "Неправильное распределение ролей в команде"
+    - "Нехватка ментальной подготовки к игре"
+    - "Слишком слабый или неэффективный лидер в команде"
+    - "Недостаточная эффективность универсальности в составе команды"
+    - "Противник использовал сильную тактику обороны, что мешало вашей команде забивать голы"
+  commands_list: "Доступные команды:\n/games - Играть в игры\n/stats - Просмотреть статистику\n/profile - Настройки профиля\n/shop - Магазин\n/referral - Реферальная система\n/changelang - Изменить язык"
+  no_attempts_left: "У вас закончились попытки!"
+  match_started: "Матч начался"
+  wait_15_seconds: "Матч начался, ждите 15 секунд..."
+  match_requirements: "Для игры в матч требуются 5000 монет и 1 билет"
+  insufficient_resources: "Недостаточно ресурсов!"
+  no_opponents: "Нет доступных оппонентов!"
+  opponent_search_error: "Ошибка поиска оппонента!"
+  play_button: "Играть"
