--- a/loc/uk_UA.yaml
+++ b/loc/uk_UA.yaml
@@ -47,4 +47,120 @@ messages:
   lang_changed: "Мову успішно змінено!"
   select_name: "Будь ласка, введіть ваше ім'я для реєстрації:"
   name_empty: "Ім'я не може бути порожнім. Будь ласка, введіть ваше ім'я:"
-
+  games_and_events: "Виберіть розділ:"
+  games: "Ігри"
+  events: "Події"
+  penalty: "Серія пенальті"
+  penalty_start: "Серія пенальті! Вам потрібно 25000 успішності для гри."
+  penalty_result: "Голів: {goals}/5, Нагорода: {reward} монет, Спроб залишилося: {left}"
+  matches: "Матчі"
+  match_start: "Матч проти {opponent} ({success})"
+  match_win: "Ви виграли {score1}:{score2}, +11000 монет, +10 кубків!"
+  match_lose: "Ви програли {score1}:{score2}. Причина: {reason}"
+  match_draw: "Нічия {score1}:{score2}"
+  loss_reasons:
+    - "Суддя був несправедливий"
+    - "У вас був поганий настрій"
+    - "Ви не грали командно"
+    - "Брак досвіду"
+    - "Погане здоров'я"
+    - "Погана концентрація"
+    - "Нещасливий збіг обставин"
+    - "Суперник сильніший"
+    - "Поганий вибір тактики"
+    - "Промахнувся у вирішальний момент"
+    - "Занадто втомився"
+    - "Невдача"
+    - "Травма"
+    - "Погана комунікація в команді"
+    - "Неправильний вибір складу команди"
+    - "Занадто старанно дотримувався тактики, не враховуючи дій суперника"
+    - "Деякі гравці в команді не впоралися з навантаженням"
+    - "Ви занадто опустили руки після пропущеного гола"
+    - "Брак сну минулої ночі"
+    - "Суперник використовував заборонені прийоми"
+    - "Недостатня мотивація в команді"
+    - "Немає хімії між гравцями команди"
+    - "Суперник більш креативний і винахідливий"
+    - "Ви не змогли адаптуватися до стилю гри суперника"
+    - "Занадто багато тиску на гравців"
+    - "Недостатньо часу для підготовки до матчу"
+    - "Немає повної концентрації на гру"
+    - "Неправильно обраний момент для атаки"
+    - "Недостатньо ігрової практики"
+    - "Суперник більш технічний і вмілий"
+    - "Занадто багато помилок у грі"
+    - "Суперник був більш мотивований і хотів перемоги більше"
+    - "Немає взаєморозуміння в команді"
+    - "Ви прийняли погане рішення у вирішальний момент"
+    - "Суперник використовував несподівані тактики"
+    - "Брак координації в команді"
+    - "Погані погодні умови"
+    - "Проблеми з екіпіруванням"
+    - "Суперник грав дуже агресивно"
+    - "Недостатня впевненість у своїх силах"
+    - "Суперник використовував більш ефективні тактики"
+    - "Поганий вибір екіпірування"
+    - "Недостатня витривалість"
+    - "Неправильний вибір харчування"
+    - "Суперник мав сильнішу підтримку від уболівальників"
+    - "Недостатнє розуміння правил гри"
+    - "Поганий контроль над емоціями"
+    - "Суперник занадто швидкий і спритний"
+    - "Ви стали занадто оборонними після початку матчу"
+    - "Неправильно оцінили можливості своєї команди"
+    - "Недостатнє знання тактики і стратегії"
+    - "Погана форма перед матчем"
+    - "Суперник використовував хитрість і обман під час гри"
+    - "Недостатня ефективна тренування перед матчем"
+    - "Неправильний вибір партнерів для гри"
+    - "Брак досвіду в іграх на високому рівні"
+    - "Помилки при підготовці до матчу"
+    - "Нездатність адаптуватися до змінюваних умов гри"
+    - "Погана мотивація з боку тренера"
+    - "Ви нервували перед матчем і не змогли розслабитися"
+    - "Суперник був більш фізично підготовлений"
+    - "Недостатня ефективна тактика захисту"
+    - "Недостатньо налаштована система командної гри"
+    - "Неправильний вибір тактики для конкретного суперника"
+    - "Суперник використовував більш тонкі тактичні хитрощі"
+    - "Брак підтримки з боку уболівальників"
+    - "Погане самопочуття в день матчу"
+    - "Неправильно оцінили сили своїх суперників"
+    - "Занадто багато відволікаючих факторів поза полем"
+    - "Недостатньо ефективне управління складом команди"
+    - "Ви не змогли адаптуватися до змінюваних умов гри"
+    - "Суперник був краще підготовлений психологічно"
+    - "Недостатньо розвинуте інтуїтивне розуміння інших членів команди"
+    - "Ви відчували фізичний біль або дискомфорт під час гри"
+    - "Брак професійної допомоги у складанні тактики"
+    - "Суперник занадто добре знав ваші сильні і слабкі сторони"
+    - "Ви були занадто передбачувані у своїй грі"
+    - "Недостатня ефективна тактика нападу"
+    - "Суперник грав у команді довше і ефективніше"
+    - "Занадто багато часу було витрачено на роздуми про невдачі в попередніх матчах"
+    - "Недостатньо часу, присвяченого навчанню фізичним і технічним аспектам гри"
+    - "Поганий вибір моменту для заміни гравців"
+    - "Брак дисципліни в команді"
+    - "Ви не дотримувалися своєї стратегії"
+    - "Суперник був краще підготовлений до конкретної гри"
+    - "Суперник використовував більш тонкі маневри і тактику"
+    - "Суперник грав дуже сильно на початку гри і налагодив переможний хід"
+    - "Команда недостатньо досвідчена в цілому"
+    - "Зовнішні фактори, такі як погода або якість поля, негативно вплинули на вашу гру"
+    - "Суперник мав головного тренера з більшим досвідом, ніж ваш"
+    - "Суперник використовує інноваційні методи тренування і підготовки"
+    - "Неправильний розподіл ролей у команді"
+    - "Брак ментальної підготовки до гри"
+    - "Занадто слабкий або неефективний лідер у команді"
+    - "Недостатня ефективність універсальності у складі команди"
+    - "Суперник використовував сильну тактику оборони, що заважало вашій команді забивати голи"
+  commands_list: "Доступні команди:\n/games - Грати в ігри\n/stats - Переглянути статистику\n/profile - Налаштування профілю\n/shop - Магазин\n/referral - Реферальна система\n/changelang - Змінити мову"
+  no_attempts_left: "У вас закінчилися спроби!"
+  match_started: "Матч розпочався"
+  wait_15_seconds: "Матч розпочався, чекайте 15 секунд..."
+  match_requirements: "Для гри в матч потрібні 5000 монет і 1 квиток"
+  insufficient_resources: "Недостатньо ресурсів!"
+  no_opponents: "Немає доступних опонентів!"
+  opponent_search_error: "Помилка пошуку опонента!"
+  play_button: "Грати"
