Add referral system
Implemented a referral system awarding 40000 coins to referrers for each new user, with checks for self-referral and banned users. Added /referral command to display referral link and stats. Updated localization files to include referral info messages.

--- a/loc/cs_CZ.yaml
+++ b/loc/cs_CZ.yaml
@@ -164,3 +164,4 @@ messages:
   no_opponents: "Žádní dostupní soupeři!"
   opponent_search_error: "Chyba vyhledávání soupeře!"
   play_button: "Hrát"
+  referral_info: "Váš referenční odkaz: {link}\nPozvaní referenti: {count}\nZískejte 40000 mincí za každého referenta!"
