--- a/loc/en_US.yaml
+++ b/loc/en_US.yaml
@@ -58,15 +58,6 @@ messages:
   match_win: "You won {score1}:{score2}, +11000 coins, +10 cups!"
   match_lose: "You lost {score1}:{score2}. Reason: {reason}"
   match_draw: "Draw {score1}:{score2}"
-  commands_list: "Available commands:\n/games - Play games\n/stats - View statistics\n/profile - Profile settings\n/shop - Shop\n/referral - Referral system\n/changelang - Change language"
-  no_attempts_left: "You have no attempts left!"
-  match_started: "Match started"
-  wait_15_seconds: "Match started, wait 15 seconds..."
-  match_requirements: "To play a match, you need 5000 coins and 1 ticket"
-  insufficient_resources: "Insufficient resources!"
-  no_opponents: "No available opponents!"
-  opponent_search_error: "Opponent search error!"
-  play_button: "Play"
   loss_reasons:
     - "The referee was unfair"
     - "You were in a bad mood"
@@ -164,3 +155,13 @@ messages:
     - "Too weak or ineffective leader in the team"
     - "Insufficient effectiveness of versatility in the team composition"
     - "The opponent used a strong defense tactic that prevented your team from scoring goals"
+  commands_list: "Available commands:\n/games - Play games\n/stats - View statistics\n/profile - Profile settings\n/shop - Shop\n/referral - Referral system\n/changelang - Change language"
+  no_attempts_left: "You have no attempts left!"
+  match_started: "Match started"
+  wait_15_seconds: "Match started, wait 15 seconds..."
+  match_requirements: "To play a match, you need 5000 coins and 1 ticket"
+  insufficient_resources: "Insufficient resources!"
+  no_opponents: "No available opponents!"
+  opponent_search_error: "Opponent search error!"
+  play_button: "Play"
+  referral_info: "Your referral link: {link}\nReferrals invited: {count}\nEarn 40000 coins per referral!"
