--- a/loc/ru_RU.yaml
+++ b/loc/ru_RU.yaml
@@ -164,3 +164,4 @@ messages:
   no_opponents: "Нет доступных оппонентов!"
   opponent_search_error: "Ошибка поиска оппонента!"
   play_button: "Играть"
+  referral_info: "Ваша реферальная ссылка: {link}\nПриглашенных рефералов: {count}\nЗарабатывайте 40000 монет за каждого реферала!"
