--- a/loc/uk_UA.yaml
+++ b/loc/uk_UA.yaml
@@ -164,3 +164,4 @@ messages:
   no_opponents: "Немає доступних опонентів!"
   opponent_search_error: "Помилка пошуку опонента!"
   play_button: "Грати"
+  referral_info: "Ваше реферальне посилання: {link}\nЗапрошених рефералів: {count}\nЗаробляйте 40000 монет за кожного реферала!"
