--- a/loc/cs_CZ.yaml
+++ b/loc/cs_CZ.yaml
@@ -165,3 +165,6 @@ messages:
   opponent_search_error: "Chyba vyhledávání soupeře!"
   play_button: "Hrát"
   referral_info: "Váš referenční odkaz: {link}\nPozvaní referenti: {count}\nZískejte 40000 mincí za každého referenta!"
+  stats: "Statistiky"
+  referral: "Referenti"
+  changelang: "Změnit jazyk"
